package pt.isep.psoft.aisafe.domain;

public enum RouteStatus {
    ACTIVE,
    INACTIVE
}